--- a/WebContent/i18n/app_fr.json
+++ b/WebContent/i18n/app_fr.json
@@ -38,7 +38,7 @@
 	"latest":"Dernières vidéos",
 	"search-results":"Résultats de la recherche",
 	"results":"résultats",
-	"design-by": "&copy;2017 conçu par <a target='_blank' href='http://wpfreeware.com/'>Wpfreeware</a> et <a target='_blank' href='http://www.thinktech.sn/'>ThinkTech</a>",
+	"design-by": "&copy;2017 conçu par <a target='_blank' href='http://www.thinktech.sn/'>ThinkTech</a>",
 	"message-404":"La page demandée ne peut être trouvée."	
 }
 }
