improving the project.

--- a/WebContent/i18n/app_en.json
+++ b/WebContent/i18n/app_en.json
@@ -39,6 +39,8 @@
 	"search-results":"Search Results",
 	"results":"Results",
 	"design-by": "&copy;2017 Designed by <a target='_blank' href='http://www.thinktech.sn/'>ThinkTech</a>",
-	"message-404":"The page requested cannot be found."	
+	"message-404":"The page requested cannot be found.",
+	"information":"Information",
+	"enter-search":"enter your search"	
 }
 }
