--- a/WebContent/i18n/app_fr.json
+++ b/WebContent/i18n/app_fr.json
@@ -39,6 +39,8 @@
 	"search-results":"Résultats de la recherche",
 	"results":"résultats",
 	"design-by": "&copy;2017 conçu par <a target='_blank' href='http://www.thinktech.sn/'>ThinkTech</a>",
-	"message-404":"La page demandée ne peut être trouvée."	
+	"message-404":"La page demandée ne peut être trouvée.",
+	"information":"Information",
+	"enter-search":"entrer votre recherche"	
 }
 }
